--- a/app/views/studios/show.html.erb
+++ b/app/views/studios/show.html.erb
@@ -12,7 +12,7 @@
 
 <h3> Add movie to <%= @studio.name %> </h3>
 
-<%= render partial: 'movies/form', locals: { movie: Movie.new(), studio: @studio, x: 50, y: 100, z: 200 } %>
+<%= render 'movies/form', { :movie => Movie.new(), :studio => @studio, :x => 50, :y => 100, :z => 200 } %>
 
 <%= link_to 'Edit', edit_studio_path(@studio) %> |
 <%= link_to 'Back', studios_path %>
